add .nimiq-icon.close-circle to intermediate

--- a/icons/icons.css
+++ b/icons/icons.css
@@ -61,3 +61,9 @@
 [icon-eye-off] {
     background-image: url('data:image/svg+xml,<svg fill="white" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24"><path d="M11.8 9l3.2 3.2V12a3 3 0 0 0-3-3h-.2m-4.3.8l1.6 1.5-.1.7a3 3 0 0 0 3 3h.7l1.5 1.5a5 5 0 0 1-2.2.5 5 5 0 0 1-5-5c0-.8.2-1.5.5-2.2M2 4.3l2.3 2.3.4.4c-1.6 1.3-3 3-3.7 5a11.8 11.8 0 0 0 15.4 6.7l.4.4 3 2.9 1.2-1.3L3.3 3M12 7a5 5 0 0 1 5 5c0 .6-.1 1.3-.4 1.8l3 3c1.5-1.3 2.7-3 3.4-4.8A11.8 11.8 0 0 0 8 5.2l2.2 2.1A5 5 0 0 1 12 7z"/></svg>')
 }
+
+[icon-cancel-circle],
+.nq-icon.cancel-circle {
+    background-image: url('data:image/svg+xml,<svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path opacity="0.25" fill-rule="evenodd" clip-rule="evenodd" d="M9.80761 9.80762C14.8761 4.7391 23.1239 4.7391 28.1924 9.80762C33.2609 14.8761 33.2609 23.1239 28.1924 28.1924C23.1239 33.2609 14.8761 33.2609 9.80761 28.1924C4.73909 23.1239 4.73909 14.8761 9.80761 9.80762ZM19 17.5858L22.5355 14.0503L23.9497 15.4645L20.4142 19L23.9497 22.5355L22.5355 23.9498L19 20.4142L15.4645 23.9498L14.0503 22.5355L17.5858 19L14.0503 15.4645L15.4645 14.0503L19 17.5858Z" fill="%23101531"/></svg>');
+    background-position: center;
+}
