--- a/src/inputs.css
+++ b/src/inputs.css
@@ -1,6 +1,7 @@
 .nq-input {
     font-family: inherit;
     font-size: inherit;
+    font-weight: inherit;
     padding: 1rem 2rem;
     border: solid 2px rgba(31, 35, 72, 0.1); /* Based on Nimiq Blue */
     color: var(--nimiq-blue);
