Refactor .nq-warning into .nq-notice.warning
And add .info, .success and .error modifiers.

--- a/src/layout.css
+++ b/src/layout.css
@@ -68,7 +68,7 @@ body {
     margin: 0;
 }
 
-.nq-card-header .nq-warning {
+.nq-card-header .nq-notice {
     margin: 3rem 0 0;
     text-align: center;
 }
