--- a/src/typography.css
+++ b/src/typography.css
@@ -61,9 +61,24 @@ body {
     color: rgb(31, 35, 72, 0.7); /* Based on Nimiq Blue */
 }
 
-.nq-warning {
+.nq-notice {
     font-weight: 600;
+}
+
+.nq-notice.info {
+    color: var(--nimiq-light-blue);
+}
+
+.nq-notice.success {
+    color: var(--nimiq-green);
+}
+
+.nq-notice.warning {
     color: var(--nimiq-orange);
+}
+
+.nq-notice.error {
+    color: var(--nimiq-red);
 }
 
 .nq-link,
