--- a/src/dark-adaptions.css
+++ b/src/dark-adaptions.css
@@ -1,125 +1,125 @@
 /* typography */
 
+.nq-indigo-bg,
 .nq-blue-bg,
-.nq-light-blue-bg,
-.nq-gold-bg,
-.nq-green-bg,
+.nq-yellow-bg,
+.nq-teal-bg,
 .nq-orange-bg,
 .nq-red-bg,
 .nq-purple-bg,
 .nq-pink-bg,
-.nq-light-green-bg,
+.nq-green-bg,
 .nq-brown-bg,
 
+.nq-indigo-bg .nq-link,
 .nq-blue-bg .nq-link,
-.nq-light-blue-bg .nq-link,
-.nq-gold-bg .nq-link,
-.nq-green-bg .nq-link,
+.nq-yellow-bg .nq-link,
+.nq-teal-bg .nq-link,
 .nq-orange-bg .nq-link,
 .nq-red-bg .nq-link,
 .nq-purple-bg .nq-link,
 .nq-pink-bg .nq-link,
-.nq-light-green-bg .nq-link,
+.nq-green-bg .nq-link,
 .nq-brown-bg .nq-link {
     color: white;
 }
 
+.nq-indigo-bg .nq-text,
 .nq-blue-bg .nq-text,
-.nq-light-blue-bg .nq-text,
-.nq-gold-bg .nq-text,
-.nq-green-bg .nq-text,
+.nq-yellow-bg .nq-text,
+.nq-teal-bg .nq-text,
 .nq-orange-bg .nq-text,
 .nq-red-bg .nq-text,
 .nq-purple-bg .nq-text,
 .nq-pink-bg .nq-text,
-.nq-light-green-bg .nq-text,
+.nq-green-bg .nq-text,
 .nq-brown-bg .nq-text,
 
+.nq-indigo-bg .nq-label,
 .nq-blue-bg .nq-label,
-.nq-light-blue-bg .nq-label,
-.nq-gold-bg .nq-label,
-.nq-green-bg .nq-label,
+.nq-yellow-bg .nq-label,
+.nq-teal-bg .nq-label,
 .nq-orange-bg .nq-label,
 .nq-red-bg .nq-label,
 .nq-purple-bg .nq-label,
 .nq-pink-bg .nq-label,
-.nq-light-green-bg .nq-label,
+.nq-green-bg .nq-label,
 .nq-brown-bg .nq-label {
     color: rgba(255, 255, 255, 0.7);
 }
 
 /* theme */
 
-.nq-blue-bg {
-    --nimiq-light-blue: #0CA6FE; /* rgb(12, 166, 254) */
+.nq-indigo-bg {
+    --nimiq-blue: #0CA6FE; /* rgb(12, 166, 254) */
 }
 
-.nq-blue-bg {
+.nq-indigo-bg {
     --nimiq-red:        #FF5C48; /* rgb(255, 92, 72) */
 }
 
 /* inputs */
 
+.nq-indigo-bg .nq-input,
 .nq-blue-bg .nq-input,
-.nq-light-blue-bg .nq-input,
-.nq-gold-bg .nq-input,
-.nq-green-bg .nq-input,
+.nq-yellow-bg .nq-input,
+.nq-teal-bg .nq-input,
 .nq-orange-bg .nq-input,
 .nq-red-bg .nq-input,
 .nq-purple-bg .nq-input,
 .nq-pink-bg .nq-input,
-.nq-light-green-bg .nq-input,
+.nq-green-bg .nq-input,
 .nq-brown-bg .nq-input {
     border-color: rgba(255, 255, 255, 0.2);
     color: white;
 }
 
+.nq-indigo-bg .nq-input.vanishing,
 .nq-blue-bg .nq-input.vanishing,
-.nq-light-blue-bg .nq-input.vanishing,
-.nq-gold-bg .nq-input.vanishing,
-.nq-green-bg .nq-input.vanishing,
+.nq-yellow-bg .nq-input.vanishing,
+.nq-teal-bg .nq-input.vanishing,
 .nq-orange-bg .nq-input.vanishing,
 .nq-red-bg .nq-input.vanishing,
 .nq-purple-bg .nq-input.vanishing,
 .nq-pink-bg .nq-input.vanishing,
-.nq-light-green-bg .nq-input.vanishing,
+.nq-green-bg .nq-input.vanishing,
 .nq-brown-bg .nq-input.vanishing {
     border-color: rgba(255, 255, 255, 0);
 }
 
+.nq-indigo-bg .nq-input::placeholder,
 .nq-blue-bg .nq-input::placeholder,
-.nq-light-blue-bg .nq-input::placeholder,
-.nq-gold-bg .nq-input::placeholder,
-.nq-green-bg .nq-input::placeholder,
+.nq-yellow-bg .nq-input::placeholder,
+.nq-teal-bg .nq-input::placeholder,
 .nq-orange-bg .nq-input::placeholder,
 .nq-red-bg .nq-input::placeholder,
 .nq-purple-bg .nq-input::placeholder,
 .nq-pink-bg .nq-input::placeholder,
-.nq-light-green-bg .nq-input::placeholder,
+.nq-green-bg .nq-input::placeholder,
 .nq-brown-bg .nq-input::placeholder {
     color: rgba(255, 255, 255, 0.3);
 }
 
+.nq-indigo-bg .nq-input:hover,
 .nq-blue-bg .nq-input:hover,
-.nq-light-blue-bg .nq-input:hover,
-.nq-gold-bg .nq-input:hover,
-.nq-green-bg .nq-input:hover,
+.nq-yellow-bg .nq-input:hover,
+.nq-teal-bg .nq-input:hover,
 .nq-orange-bg .nq-input:hover,
 .nq-red-bg .nq-input:hover,
 .nq-purple-bg .nq-input:hover,
 .nq-pink-bg .nq-input:hover,
-.nq-light-green-bg .nq-input:hover,
+.nq-green-bg .nq-input:hover,
 .nq-brown-bg .nq-input:hover,
 
+.nq-indigo-bg .nq-input:focus,
 .nq-blue-bg .nq-input:focus,
-.nq-light-blue-bg .nq-input:focus,
-.nq-gold-bg .nq-input:focus,
-.nq-green-bg .nq-input:focus,
+.nq-yellow-bg .nq-input:focus,
+.nq-teal-bg .nq-input:focus,
 .nq-orange-bg .nq-input:focus,
 .nq-red-bg .nq-input:focus,
 .nq-purple-bg .nq-input:focus,
 .nq-pink-bg .nq-input:focus,
-.nq-light-green-bg .nq-input:focus,
+.nq-green-bg .nq-input:focus,
 .nq-brown-bg .nq-input:focus{
     border-color: rgba(255, 255, 255, 0.3);
     color: white;
